# SpoofGUI

./: .gitignore  CONTRIBUTING.md  README.md  build-release.bat  sni.json
.github/workflows/: release.yml
app/: SpoofGUI.sln
app/SpoofGUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SplashWindow.xaml  SplashWindow.xaml.cs  SpoofGUI.csproj  app.manifest
app/SpoofGUI/Core/: AppLog.cs  AppSettings.cs  Bootstrap.cs  CrashLog.cs  NetStats.cs  NetworkHelper.cs  Paths.cs  ProxyPortKiller.cs  SniListService.cs  SystemProxy.cs
app/SpoofGUI/Database/: DatabaseConnection.cs  DatabaseInitializer.cs  ProfileRepository.cs  SettingsRepository.cs  V2RayProfileRepository.cs
app/SpoofGUI/Engine/: EngineClient.cs  EngineSupervisor.cs  SingBoxTunnelService.cs  TunnelService.cs  XrayCoreService.cs  config.json
app/SpoofGUI/EngineSource/: main.py
app/SpoofGUI/GUI/: Shell.xaml  Shell.xaml.cs  ThemeService.cs
app/SpoofGUI/GUI/Interactions/: PressScale.cs
app/SpoofGUI/GUI/Pages/: ConfigPage.xaml  ConfigPage.xaml.cs  LogsPage.xaml  LogsPage.xaml.cs  MainPage.xaml  MainPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  V2RayPage.xaml  (+1 more)
app/SpoofGUI/Models/: SpoofProfile.cs
docs/: BUILD.md  DESIGN.md  PRODUCT.md
engine/: Cargo.toml
engine/src/: main.rs  xray.rs
engine/src/app/: engine.rs  mod.rs  state.rs
engine/src/ipc/: message.rs  mod.rs  pipe.rs
engine/src/spoof/: client_hello.rs  forwarder.rs  injector.rs  mod.rs  net_iface.rs  spoofer.rs
installer/: SpoofGUI.Portable.iss  SpoofGUI.iss
scripts/: build-python-engine.ps1  build-release.ps1
(+8 files in other folders)
